kubernetes/apps/network/echo-server/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: websecure
  hostnames:
    - "echo-server.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth
      backendRefs:
        - name: echo-server
          port: 8080
