kubernetes/apps/network/echo-server/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: echo-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: echo-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
        - matchLabels:
            app.kubernetes.io/instance: traefik-external-network
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
